[project]
name = "tetris-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiortc>=1.14.0",
    "av>=16.0.1",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.0",
    "websockets>=15.0.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
